<resources>
    <string name="app_name">JSI Baseline HH Survey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sectionA"> SECTION A: IDENTIFICATION </string>
    <string name="jsia01"> کلسٹر نمبر </string>
    <string name="jsia02"> کلسٹر کی قسم </string>
    <string name="jsia03"> فارم سیریل نمبر </string>
    <string name="jsia04"> صوبے کا نام </string>
    <string name="jsia05"> ضلعہ کا نام </string>
    <string name="jsia0501"> گھوٹکی </string>
    <string name="jsia0502"> شکارپور </string>
    <string name="jsia0503"> جیکب آباد </string>
    <string name="jsia0504"> کشمور </string>
    <string name="jsia06"> تحصیل /تعلقہ کا نام </string>
    <string name="jsia07"> یونین کائونسل کا نام </string>
    <string name="jsia08"> یونین کائونسل کا نام </string>
    <string name="jsia0801"> شہری </string>
    <string name="jsia0802"> دیہی </string>
    <string name="jsia09"> گھر کا نمبر </string>
    <string name="jsia10"> گلی کا نام </string>
    <string name="jsia11"> محلہ / بلاک کا نام </string>
    <string name="jsia12"> علاقے/ گاؤں کا نام </string>
    <string name="jsia13"> شہر کا نام </string>
    <string name="jsia14"> گھر کی ساخت کی نوعیت </string>
    <string name="jsia15"> جوابد ہندہ کا نام </string>
    <string name="sectionB"> Section B: Global Positioning </string>
    <string name="jsib01"> Latitude </string>
    <string name="jsib02"> Latitude </string>
    <string name="sectionC"> Section C: introduction and consent </string>
    <string name="jsic01"> کیا آپ سروے کے متعلق اس وقت کوئی سوال کرنا چاہتی ہیں؟ </string>
    <string name="jsic01a"> ہاں </string>
    <string name="jsic01b"> نہیں </string>
    <string name="jsic02"> کیاآپ راضی ہیں؟ کیا میں انٹرویو شروع کرسکتا /کرسکتی ہوں؟ </string>
    <string name="jsic02a"> ہاں </string>
    <string name="jsic02b"> نہیں </string>
    <string name="sectionD"> SECTION D: HOUSEHOLD MEMBERS’ INFORMATION </string>
    <string name="jsid01"> سیریل نمبر </string>
    <string name="jsid02"> گھرکے افراد کے نام </string>
    <string name="jsid03"> گھر کے سربراہ سے رشتہ </string>
    <string name="jsid03a"> Head of HH </string>
    <string name="jsid03b"> Wife/Husband </string>
    <string name="jsid03c"> Son/Daughter </string>
    <string name="jsid03d"> Son in law/Daughter in law </string>
    <string name="jsid03e"> Grand child </string>
    <string name="jsid03f"> Parents </string>
    <string name="jsid03g"> Parents in law </string>
    <string name="jsid03h"> Brother/Sister </string>
    <string name="jsid03i"> Brother in law/Sister in law </string>
    <string name="jsid03j"> Niece/Nephew </string>
    <string name="jsid03k"> Grand Parents </string>
    <string name="jsid03l"> Aunts/Uncle </string>
    <string name="jsid03m"> Adopted/Step child </string>
    <string name="jsid03n"> Domestic Servant </string>
    <string name="jsid04"> جنس </string>
    <string name="jsid04a"> Male </string>
    <string name="jsid04b"> Female </string>
    <string name="jsid05"> والد کا سیریل نمبر </string>
    <string name="jsid06"> والدہ کا سیریل نمبر </string>
    <string name="jsid07"> تاریخ پیدائش </string>
    <string name="jsid08"> عمر </string>
    <string name="jsid09"> کیا(نام) کبھی اسکول میں زیرِ تعلیم رہا ہے؟ </string>
    <string name="jsid10"> تعلیم </string>
    <string name="jsid10a"> Housewife </string>
    <string name="jsid10b"> Professional /Managerial </string>
    <string name="jsid10c"> Clerical/technical </string>
    <string name="jsid10d"> Sales and Services </string>
    <string name="jsid10e"> Skilled manual </string>
    <string name="jsid10f"> Unskilled manual </string>
    <string name="jsid10g"> Agriculture </string>
    <string name="jsid10h"> Business </string>
    <string name="jsid10i"> Student </string>
    <string name="jsid10j"> Unemployed </string>
    <string name="jsid10k"> Not Applicable </string>
    <string name="jsid10l">  </string>
    <string name="jsid10m">  </string>
    <string name="jsid10o"> Married </string>
    <string name="jsid10p"> Unmarried </string>
    <string name="jsid10q"> Widowed </string>
    <string name="jsid10r"> Divorced/Separated </string>
    <string name="jsid10s"> ازدواجی حیثیت </string>
    <string name="jsid10t">  </string>
    <string name="jsid10u">  </string>
    <string name="jsid10v"> گھر کے ٹوٹوٹل افراد </string>
    <string name="jsid10w">  </string>
    <string name="jsid11"> پیشہ </string>
    <string name="jsid11a"> Housewife </string>
    <string name="jsid11b"> Professional /Managerial </string>
    <string name="jsid11c"> Clerical/technical </string>
    <string name="jsid11d"> Sales and Services </string>
    <string name="jsid11e"> Skilled manual </string>
    <string name="jsid11f"> Unskilled manual </string>
    <string name="jsid11g"> Agriculture </string>
    <string name="jsid11h"> Business </string>
    <string name="jsid11i"> Student </string>
    <string name="jsid11j"> Unemployed </string>
    <string name="jsid11k"> Not Applicable </string>
    <string name="jsid12"> ازدواجی حیثیت </string>
    <string name="jsid12a"> Married </string>
    <string name="jsid12b"> Unmarried </string>
    <string name="jsid12c"> Widowed </string>
    <string name="jsid12d"> Divorced/Separated </string>
    <string name="jsid13"> گھر کے ٹوٹوٹل افراد </string>
    <string name="jsid14"> کل گھر کی اہل خواتین </string>
    <string name="jsid15"> کل گھر کے 5سال سے کم عمر کے بچے </string>
    <string name="sectionE"> Section E: Reproductive health </string>
    <string name="jsiia01"> کیا آپ کے گھر میں پانچ سال سے کم کسی بچے کو پچھے دو ہفتوں میں دست کی شکایت ہوئی ہے؟ </string>
    <string name="jsiia01a"> ہاں </string>
    <string name="jsiia01b"> نہیں </string>
    <string name="jsiia01c"> معلوم نہیں </string>
    <string name="jsiia02"> پچھلے دو ہفتوں میں کتنے بچوں کو دست کی شکایت ہوئی ؟ </string>
    <string name="jsiia03"> {Name} کو کتنے دن تک دست کی شکایت رہی؟ </string>
    <string name="jsiia04"> کیا پاخانہ میں خون تھا؟ </string>
    <string name="jsiia04a"> ہاں </string>
    <string name="jsiia04b"> نہیں </string>
    <string name="jsiia04c"> معلوم نہیں </string>
    <string name="jsiia05"> {Name}کو دستوں کی شکایت ہونے پر کیا آپ نے علاج کروایا؟ </string>
    <string name="jsiia05a"> ہاں </string>
    <string name="jsiia05b"> نہیں </string>
    <string name="jsiia05c"> معلوم نہیں </string>
    <string name="jsiia06"> دست کی شکایت کی صورت میں آپ نے {Name} کا علاج کیوں نہیں کروایا؟ </string>
    <string name="jsiia06a"> مسئلہ اتنا بڑا نہیں تھا کہ علاج کرواتے </string>
    <string name="jsiia06b"> مرکز صحت کو دینے کے لیے پیسے نہیں تھے </string>
    <string name="jsiia06c"> ٹرانسپورٹ کی عدم موجودگی </string>
    <string name="jsiia06d"> کوئی مرد موجود نہیں تھا جو مرکزِ صحت لے کر جاسکے </string>
    <string name="jsiia06e"> گھر کے سربراہ/ شوہر/ساس نے اجازت نہیں دی </string>
    <string name="jsiia06f"> مرکز صحت کافی دور تھا </string>
    <string name="jsiia06g"> مرکز بند تھا </string>
    <string name="jsiia06h"> ناقص سہولت کی فراہمی </string>
    <string name="jsiia07"> دست کی شکایت پر آپ نے{Name}کا علاج کہاں سے کروایا؟ </string>
    <string name="jsiia07a"> گھر پر </string>
    <string name="jsiia07b"> گورنمنٹ مرکز صحت میں </string>
    <string name="jsiia07c"> پرائیوٹ مرکز صحت میں </string>
    <string name="jsiia07d"> NGO مرکز صحت میں </string>
    <string name="jsiia08"> آپ کو کس نے{Name} کو مرکزِ صحت لے جانے کی تجویز دی؟ </string>
    <string name="jsiia08a"> ڈاکٹر </string>
    <string name="jsiia08b"> LHV(لیڈی ہیلتھ وزیٹر) </string>
    <string name="jsiia08c"> نرس </string>
    <string name="jsiia08d"> CMW(کمیونٹی مڈوائف) </string>
    <string name="jsiia08e"> ڈسپنسر/کمپاؤنڈر </string>
    <string name="jsiia08f"> LHW(لیڈی ہیلتھ ورکر) </string>
    <string name="jsiia08g"> دائی </string>
    <string name="jsiia08h"> ہومیوپیتھک/ حکیم </string>
    <string name="jsiia08i"> خود </string>
    <string name="jsiia09"> مرکزِ صحت جہاں آپ نے{Name}کے دستوں کی شکایت ہونے پر علاج کروایا، آپ کے گھر سے کتنا دور ہے؟ </string>
    <string name="jsiia09b"> معلوم نہیں </string>
    <string name="jsiia10"> جہاں آپ نے{Name} کے دستوں کی شکایت کا علاج کروایا۔ اُس مرکزِ صحت میں جانے کے لیے کتنا وقت لگتا ہے؟ </string>
    <string name="jsiia10b"> معلوم نہیں </string>
    <string name="jsiia11"> {Name}کا علاج کس نے کیا؟ </string>
    <string name="jsiia11a"> ڈاکٹر </string>
    <string name="jsiia11b"> LHV(لیڈی ہیلتھ وزیٹر) </string>
    <string name="jsiia11c"> نرس </string>
    <string name="jsiia11d"> CMW(کمیونٹی مڈوائف) </string>
    <string name="jsiia11e"> ڈسپنسر/کمپاؤنڈر </string>
    <string name="jsiia11f"> LHW(لیڈی ہیلتھ ورکر) </string>
    <string name="jsiia11g"> دائی </string>
    <string name="jsiia11h"> ہومیوپیتھک/ حکیم </string>
    <string name="jsiia12"> {Name}کو دستوں کی شکایت کے لیے کیا علاج دیا گیا؟ </string>
    <string name="jsiia12a"> پانی میں حل شدہ او آر ایس یا پری پیکڈ liquid </string>
    <string name="jsiia12b"> تجویز کردہ گھریلو فلوئیڈ </string>
    <string name="jsiia12c"> زیادہ فلوئیڈز </string>
    <string name="jsiia12d"> انٹی بائیوٹیک ڈرگ(Antibiotic Drug) </string>
    <string name="jsiia12e"> اینٹی موٹیلٹی(Anti motility) </string>
    <string name="jsiia12f"> زنک سپلیمنٹ(Zinc Supplement) </string>
    <string name="jsiia12g"> فلیجل(Flagyl) </string>
    <string name="jsiia12h"> انجیکشن/ ڈرپ </string>
    <string name="jsiia12i"> گھریلو نسخے </string>
    <string name="jsiia13"> کیا{Name}کو دستوں کے علاج کے لیے ہسپتال میں داخل کیا گیا تھا ؟ </string>
    <string name="jsiia13a"> ہاں </string>
    <string name="jsiia13b"> نہیں </string>
    <string name="jsiia14"> {Name}کس ہسپتال میں داخل کیا گیا؟ </string>
    <string name="jsiia14a"> گورنمنٹ مرکز صحت میں </string>
    <string name="jsiia14b"> پرائیوٹ مرکز صحت میں </string>
    <string name="jsiia14c"> NGO مرکز صحت میں </string>
    <string name="jsiia15"> {Name}کتنے دنوں کے لے ہسپتال میں داخل رہے؟َ </string>
    <string name="jsiia15b"> دن </string>
    <string name="jsiia16"> {Name}کو دستوں کی تکلیف کے لیے ہسپتال میں کس طرح کا علاج میسر کیا گیا؟ (ایک سے زائد جوابات آسکتے ہیں) </string>
    <string name="jsiia16a"> اینٹی بائیوٹک گولی یا سیرپ </string>
    <string name="jsiia16b"> اینٹی موٹلیٹی گولی یا سیرپ </string>
    <string name="jsiia16c"> انجیکشن اینٹی بائیوٹک </string>
    <string name="jsiia16d"> انٹراوینس (IV( </string>
    <string name="jsiia16e"> چاول کا پانی/ rice starch </string>
    <string name="jsiia16f"> پودینے کا پانی/ mint extract </string>
    <string name="jsiia16g"> دیگر </string>
    <string name="jsiia17"> کیا آپ نے ORS کا نام سنا ہے؟ </string>
    <string name="jsiia17a"> ہاں </string>
    <string name="jsiia17b"> نہیں </string>
    <string name="jsiia18"> کیا آپ کو او آر ایس بنانے کا طریقہ معلوم ہے؟ </string>
    <string name="jsiia18a"> ہاں </string>
    <string name="jsiia18b"> نہیں </string>
    <string name="jsiia18c"> معلوم نہیں </string>
    <string name="jsiia19"> آپ نے او آر ایس بنانا کہاں سے سیکھا؟ </string>
    <string name="jsiia19a"> ڈاکٹر </string>
    <string name="jsiia19b"> LHV(لیڈی ہیلتھ وزیٹر) </string>
    <string name="jsiia19c"> نرس </string>
    <string name="jsiia19d"> CMW(کمیونٹی مڈوائف) </string>
    <string name="jsiia19e"> ڈسپنسر/کمپاؤنڈر </string>
    <string name="jsiia19f"> LHW(لیڈی ہیلتھ ورکر) </string>
    <string name="jsiia19g"> دائی </string>
    <string name="jsiia20"> {Name} کا دستوں کا علاج کروانے پر آپ کے کتنے پیسے لگے؟ </string>
    <string name="jsiia21"> {Name} کے دستوں کے علاج کے حصول کے لیے آپ کا ٹرانسپورٹ پر کتنا خرچ ہوا؟ </string>
</resources>