  <layout xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.tool2.SectionD_tool_2Activity"> <data> <import type="android.view.View" /> <variable name="callback" type="com.example.hassannaqvi.fas.ui.tool2.SectionD_tool_2Activity"/></data> <ScrollView style="@style/i_scrollview" > <LinearLayout style="@style/linerlayout_view"> <LinearLayout  style="@style/linerlayout_view_wt_bound"> <!-- jsiia01_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia01" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia01"/> <RadioGroup android:id="@+id/jsiia01" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia01a" android:text="@string/jsiia01a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia01b" android:text="@string/jsiia01b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia01c" android:text="@string/jsiia01c" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia02_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia02" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia02"/> <EditText  android:id="@+id/jsiia02a" style="@style/textInput"  android:hint="@string/jsiia02" android:maxLength="4" /> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia03_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia03" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia03"/> <EditText  android:id="@+id/jsiia03a" style="@style/textInput"  android:hint="@string/jsiia03" android:maxLength="4" /> <TextView style="@style/i_textview" android:text="@string/jsiia04"/> <RadioGroup android:id="@+id/jsiia04" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia04a" android:text="@string/jsiia04a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia04b" android:text="@string/jsiia04b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia04c" android:text="@string/jsiia04c" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia05_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia05" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia05"/> <RadioGroup android:id="@+id/jsiia05" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia05a" android:text="@string/jsiia05a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia05b" android:text="@string/jsiia05b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia05c" android:text="@string/jsiia05c" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia06_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia06" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia06"/> <RadioGroup android:id="@+id/jsiia06" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia06a" android:text="@string/jsiia06a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia06b" android:text="@string/jsiia06b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia06c" android:text="@string/jsiia06c" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia06d" android:text="@string/jsiia06d" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia06e" android:text="@string/jsiia06e" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia06f" android:text="@string/jsiia06f" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia06g" android:text="@string/jsiia06g" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia06h" android:text="@string/jsiia06h" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia07_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia07" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia07"/> <RadioGroup android:id="@+id/jsiia07" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia07a" android:text="@string/jsiia07a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia07b" android:text="@string/jsiia07b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia07c" android:text="@string/jsiia07c" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia07d" android:text="@string/jsiia07d" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia08_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia08" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia08"/> <RadioGroup android:id="@+id/jsiia08" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia08a" android:text="@string/jsiia08a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08b" android:text="@string/jsiia08b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08c" android:text="@string/jsiia08c" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08d" android:text="@string/jsiia08d" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08e" android:text="@string/jsiia08e" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08f" android:text="@string/jsiia08f" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08g" android:text="@string/jsiia08g" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08h" android:text="@string/jsiia08h" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia08i" android:text="@string/jsiia08i" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia09_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia09" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia09"/> <EditText  android:id="@+id/jsiia09a" style="@style/textInput"  android:hint="@string/jsiia09" android:inputType="number" android:maxLength="4" />  <LinearLayout android:id="@+id/fldGrpLLjsiia09" style="@style/linerlayout_view"> <CheckBox  android:id="@+id/jsiia09b" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="1dp" android:text="@string/jsiia09b"/>  </LinearLayout> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia10_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia10" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia10"/> <EditText  android:id="@+id/jsiia10a" style="@style/textInput"  android:hint="@string/jsiia10" android:inputType="number" android:maxLength="4" />  <LinearLayout android:id="@+id/fldGrpLLjsiia10" style="@style/linerlayout_view"> <CheckBox  android:id="@+id/jsiia10b" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="1dp" android:text="@string/jsiia10b"/>  </LinearLayout> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia11_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia11" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia11"/> <RadioGroup android:id="@+id/jsiia11" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia11a" android:text="@string/jsiia11a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia11b" android:text="@string/jsiia11b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia11c" android:text="@string/jsiia11c" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia11d" android:text="@string/jsiia11d" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia11e" android:text="@string/jsiia11e" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia11f" android:text="@string/jsiia11f" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia11g" android:text="@string/jsiia11g" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia11h" android:text="@string/jsiia11h" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia12_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia12" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia12"/> <RadioGroup android:id="@+id/jsiia12" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia12a" android:text="@string/jsiia12a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12b" android:text="@string/jsiia12b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12c" android:text="@string/jsiia12c" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12d" android:text="@string/jsiia12d" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12e" android:text="@string/jsiia12e" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12f" android:text="@string/jsiia12f" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12g" android:text="@string/jsiia12g" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12h" android:text="@string/jsiia12h" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia12i" android:text="@string/jsiia12i" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia13_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia13" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia13"/> <RadioGroup android:id="@+id/jsiia13" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia13a" android:text="@string/jsiia13a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia13b" android:text="@string/jsiia13b" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia14_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia14" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia14"/> <RadioGroup android:id="@+id/jsiia14" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia14a" android:text="@string/jsiia14a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia14b" android:text="@string/jsiia14b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia14c" android:text="@string/jsiia14c" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia15_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia15" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia15"/> <EditText  android:id="@+id/jsiia15a" style="@style/textInput"  android:hint="@string/jsiia15" android:inputType="number" android:maxLength="4" />  <LinearLayout android:id="@+id/fldGrpLLjsiia15" style="@style/linerlayout_view"> <CheckBox  android:id="@+id/jsiia15b" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="1dp" android:text="@string/jsiia15b"/>  </LinearLayout> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia16_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia16" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia16"/> <RadioGroup android:id="@+id/jsiia16" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia16a" android:text="@string/jsiia16a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia16b" android:text="@string/jsiia16b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia16c" android:text="@string/jsiia16c" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia16d" android:text="@string/jsiia16d" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia16e" android:text="@string/jsiia16e" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia16f" android:text="@string/jsiia16f" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia16g" android:text="@string/jsiia16g" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia17_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia17" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia17"/> <RadioGroup android:id="@+id/jsiia17" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia17a" android:text="@string/jsiia17a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia17b" android:text="@string/jsiia17b" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia18_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia18" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia18"/> <RadioGroup android:id="@+id/jsiia18" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia18a" android:text="@string/jsiia18a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia18b" android:text="@string/jsiia18b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia18c" android:text="@string/jsiia18c" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia19_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia19" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia19"/> <RadioGroup android:id="@+id/jsiia19" style="@style/i_radiogroup"> <RadioButton android:id="@+id/jsiia19a" android:text="@string/jsiia19a" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia19b" android:text="@string/jsiia19b" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia19c" android:text="@string/jsiia19c" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia19d" android:text="@string/jsiia19d" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia19e" android:text="@string/jsiia19e" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia19f" android:text="@string/jsiia19f" style="@style/i_radiobutton" />  <RadioButton android:id="@+id/jsiia19g" android:text="@string/jsiia19g" style="@style/i_radiobutton" />  </RadioGroup> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia20_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia20" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia20"/> <EditText  android:id="@+id/jsiia20a" style="@style/textInput"  android:hint="@string/jsiia20" android:inputType="number" android:maxLength="4" /> </LinearLayout> </android.support.v7.widget.CardView> <!-- jsiia21_TextView-->  <android.support.v7.widget.CardView android:id="@+id/fldGrpCVjsiia21" style="@style/cardView"> <LinearLayout style="@style/linerlayout_view"> <TextView style="@style/i_textview" android:text="@string/jsiia21"/> <EditText  android:id="@+id/jsiia21a" style="@style/textInput"  android:hint="@string/jsiia21" android:inputType="number" android:maxLength="4" /> </LinearLayout> </android.support.v7.widget.CardView>  </LinearLayout>    </LinearLayout>  </ScrollView> </layout>
